2003-07-23  Stephane Carrez  <stcarrez@nerim.fr>

	* tui.c (tui_enable): Call tuiRefreshAll to make sure the window
	is accurate.

2003-07-23  Stephane Carrez  <stcarrez@nerim.fr>

	* tui-interp.c (tui_resume): Enable tui when we expected it.
	(tui_suspend): Remember in which TUI mode we are.
	(_initialize_tui_interp): Use the tui interpreter even when no
	other interpreter was set and define in which TUI mode to start.

2003-06-28  Daniel Jacobowitz  <drow@mvista.com>

	* tui-out.c (tui_ui_out_impl): Add NULL for redirect member.

2003-06-22  Daniel Jacobowitz  <drow@mvista.com>

	* tui-hooks.c: Update include order.
	* tui.c: Likewise.
	* tuiCommand.c: Likewise.
	* tuiData.c: Likewise.
	* tuiDataWin.c: Likewise.
	* tuiDisassem.c: Likewise.
	* tuiGeneralWin.c: Likewise.
	* tuiIO.c: Likewise.
	* tuiLayout.c: Likewise.
	* tuiRegs.c: Likewise.
	* tuiSource.c: Likewise.
	* tuiSourceWin.c: Likewise.
	* tuiStack.c: Likewise.
	* tuiWin.c: Likewise.

2003-06-12  Andreas Schwab  <schwab@suse.de>

	* tuiSource.c (tuiVerticalSourceScroll): Use get_frame_pc.
	* tuiSourceWin.c (tuiHorizontalSourceScroll): Likewise.
	* tuiStack.c (tui_get_function_from_frame): Likewise.
	(tuiShowFrameInfo): Likewise.
	* tuiWin.c (_makeVisibleWithNewHeight): Likewise.
	* tui-hooks.c (tui_selected_frame_level_changed_hook): Likewise.
	* tuiDisassem.c (tuiVerticalDisassemScroll): Likewise.
	Include "disasm.h".

2003-05-08  Andrew Cagney  <cagney@redhat.com>

	* tuiRegs.c: Use MAX_REGISTER_SIZE instead of
	MAX_REGISTER_RAW_SIZE.

2003-05-03  Andrew Cagney  <cagney@redhat.com>

	* tuiDisassem.c (tui_disassemble): Call gdb_print_insn, instead of
	TARGET_PRINT_INSN.  Do not initialize a disassemble_info object.

2003-04-30  Andrew Cagney  <cagney@redhat.com>

	* tuiDisassem.c (tui_disassemble): Use
	"deprecated_tm_print_insn_info" instead of TARGET_PRINT_INSN_INFO,
	add comment.

2003-03-14  Andrew Cagney  <cagney@redhat.com>

	* tuiRegs.c (_tuiGetRegisterRawValue): Use frame_read_register,